--- a/Data_Analysis_Who's_In.ipynb
+++ b/Data_Analysis_Who's_In.ipynb
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "4m0ThMeK0R1P",
         "colab_type": "code",
-        "outputId": "5a20c882-588c-4ea4-80f6-95f1e87ba470",
+        "outputId": "b8ef5e95-3efd-4a80-cc1d-68a84b9cd477",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 506
@@ -652,7 +652,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,7 +673,7 @@
       "metadata": {
         "id": "7L76nP6t0R1d",
         "colab_type": "code",
-        "outputId": "0313c196-d769-4d99-e2e5-d8226390a49a",
+        "outputId": "735bc5ae-22f6-42d4-a421-ed15589d2315",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 879
@@ -698,7 +698,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -719,7 +719,7 @@
       "metadata": {
         "id": "npKgLOeZ0R1k",
         "colab_type": "code",
-        "outputId": "e8c7e783-f5c1-4d9e-bb2b-98f6ec2616cb",
+        "outputId": "3a9edd38-3e16-4d34-a6a7-688d57c661d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 247
@@ -736,7 +736,7 @@
         "\n",
         "X_train.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -1321,7 +1321,7 @@
         "print(\"2016 Top 36 at-large bids correct: \", in_2016.Actual.sum())\n",
         "print(\"2017 Top 36 at-large bids correct: \", in_2017.Actual.sum())"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,7 +1368,7 @@
         "print(\"2016 Top 36 at-large bids correct: \", in_2016.Actual.sum())\n",
         "print(\"2017 Top 36 at-large bids correct: \", in_2017.Actual.sum())"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1423,7 @@
         "print(\"2016 Top 36 at-large bids correct: \", in_2016.Actual.sum())\n",
         "print(\"2017 Top 36 at-large bids correct: \", in_2017.Actual.sum())"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,7 +1474,7 @@
         "print(\"2016 Top 36 at-large bids correct: \", in_2016.Actual.sum())\n",
         "print(\"2017 Top 36 at-large bids correct: \", in_2017.Actual.sum())"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2743,6 +2743,79 @@
           "text": [
             "2016 Top 36 at-large bids correct:  33\n",
             "2017 Top 36 at-large bids correct:  29\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a9fCxY3fezX-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "b94ea153-f032-41ee-b5da-5e7b1993ad85"
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "import time\n",
+        "\n",
+        "\n",
+        "#descriptions of solvers https://stackoverflow.com/questions/38640109/logistic-regression-python-solvers-defintions\n",
+        "# MODEL - BUILD BASE MODEL FOR LOGISTIC REGRESSION\n",
+        "\n",
+        "start = time.time()  # TRACK TIME\n",
+        "\n",
+        "#X_combined_std = np.vstack((X_train_std, X_test_std))\n",
+        "#y_combined = np.hstack((y_train,y_test))\n",
+        "\n",
+        "lr = LogisticRegression(random_state = 1, \n",
+        "                          solver = \"newton-cg\", \n",
+        "                          multi_class='multinomial'\n",
+        "                         )  \n",
+        "  # USING THE LIMITED MEMORY BROYDEN FLETCHER GOLDFARB SHANNO ALGORITHM - MORE INFO HERE - http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
+        "\n",
+        "lr.fit(X_train, y_train.NCAA)\n",
+        "\n",
+        "  #plot_decision_regions(X=X_combined_std, y=y_combined, classifier=lr,\n",
+        "  #                      test_idx=range(105,150))\n",
+        "  #plt.show()\n",
+        "\n",
+        "score = lr.score(X_test, y_test.NCAA)  # ACCURACY AGAINST THE TEST SET\n",
+        "print(score)\n",
+        "\n",
+        "end = time.time()\n",
+        "final_time = end-start\n",
+        "print(final_time)  # RUN TIME OF BLOCK\n",
+        "  \n",
+        "  \n",
+        "predictions = pd.DataFrame(lr.predict_proba(X_test))\n",
+        "\n",
+        "predictions['Actual'] = y_test.NCAA.values\n",
+        "predictions['Season'] = y_test.season.values\n",
+        "predictions.sort_values(by = 1, ascending = False, inplace = True)\n",
+        "\n",
+        "pred_2016 = predictions[predictions['Season'] == 2016]\n",
+        "pred_2017 = predictions[predictions['Season'] == 2017]\n",
+        "\n",
+        "in_2016 = pred_2016.head(36)\n",
+        "in_2017 = pred_2017.head(36)\n",
+        "\n",
+        "print(\"2016 Top 36 at-large bid accuracy: \", in_2016.Actual.sum())\n",
+        "print(\"2017 Top 36 at-large bid accuracy: \", in_2017.Actual.sum())"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8605015673981191\n",
+            "0.645634651184082\n",
+            "2016 Top 36 at-large bid accuracy:  34\n",
+            "2017 Top 36 at-large bid accuracy:  31\n"
           ],
           "name": "stdout"
         }
