--- a/Data_Analysis_Who's_In.ipynb
+++ b/Data_Analysis_Who's_In.ipynb
@@ -39,6 +39,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CXKRun9UyInw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Who's In Prediction\n",
+        "\n",
+        "This notebook handles creating the models and predicting who is in the NCAA tournament."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Z1y3HCp00R1J",
@@ -82,7 +94,7 @@
         "data['Turnover_Diff'] = data.turnovers - data.opp_turnovers\n",
         "data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +710,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -736,7 +748,7 @@
         "\n",
         "X_train.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2753,11 +2765,11 @@
       "metadata": {
         "id": "a9fCxY3fezX-",
         "colab_type": "code",
+        "outputId": "b94ea153-f032-41ee-b5da-5e7b1993ad85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "b94ea153-f032-41ee-b5da-5e7b1993ad85"
+        }
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -2807,7 +2819,7 @@
         "print(\"2016 Top 36 at-large bid accuracy: \", in_2016.Actual.sum())\n",
         "print(\"2017 Top 36 at-large bid accuracy: \", in_2017.Actual.sum())"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
